<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play</string>
    <string name="how_to_play_explination">Tap the screen</string>
    <string name="red_button_text">Red</string>
    <string name="yellow_button_text">Yellow</string>
    <string name="green_button_text">Green</string>
</resources>
